fix max memory threshold